app/assets/stylesheets/common/base/modal.scss
// Modal wrappers

.d-modal {
  pointer-events: none; // Allow clicks through wrappers so they hit the adjacent backdrop element

  display: flex;
  align-items: center;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  z-index: z("modal", "content");
  overflow: auto;

  &.-inline {
    position: relative;
  }

  html.keyboard-visible body.ios-safari-composer-hacks & {
    height: calc(var(--composer-vh, 1vh) * 100);
  }

  &__container {
    display: flex;
    flex-direction: column;
    pointer-events: auto;
    box-sizing: border-box;
    margin: 0 auto;
    max-height: 80vh;
    background-color: var(--secondary);
    box-shadow: var(--shadow-modal);
  }

  &__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.5rem 0.5rem 0.5rem 1.5rem; //offset for close button padding
    border-bottom: 1px solid var(--primary-low);

    .modal-close .d-icon {
      font-size: var(--font-up-2);
      color: var(--primary-high);
    }
  }

  &__title-text,
  &__subtitle-text {
    margin: 0;
  }

  &__body {
    overflow-y: auto;
    padding: 1rem 1.5rem;

    input {
      width: auto;

      &[type="text"] {
        width: 100%;
      }
    }
    textarea {
      width: 100%;
      height: 80px;
    }
    pre code {
      white-space: pre-wrap;
      max-width: 100%;
    }
  }
  &__footer {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    padding: 1rem 1.5rem;
    border-top: 1px solid var(--primary-low);
    gap: 0.5rem;
  }
  &__backdrop {
    user-select: none;
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: z("modal", "overlay");
    background-color: #000;
    animation: fade 0.3s forwards;
    filter: alpha(opacity=70);

    @media (prefers-reduced-motion) {
      animation-duration: 0s;
    }
  }
}

//legacy

.fixed-modal:not(#discourse-modal) {
  // new <DModal /> only, not <DModalLegacy />
  pointer-events: none; // Allow clicks through wrappers so they hit the adjacent backdrop element
}

.modal-outer-container {
  width: 100%;
  height: 100%;
}

.modal-middle-container {
  display: flex;
  height: 100%;
  align-items: center;
}

.modal-inner-container {
  pointer-events: auto;
  --modal-max-width: 47em; // set in ems to scale with user font-size
  box-sizing: border-box;
  flex: 0 1 auto;
  margin: 0 auto;
  max-width: var(--modal-max-width);
  background-color: var(--secondary);
  box-shadow: var(--shadow-modal);

  .select-kit {
    width: 220px;

    &.tag-chooser {
      width: 100%;
    }
  }
}

.modal-open {
  .popover {
    z-index: z("modal", "popover");
  }
  .tooltip {
    z-index: z("modal", "tooltip");
  }
}

.bootbox.modal {
  position: fixed;
  z-index: z("modal", "content");
  overflow: auto;
  height: auto;
  background-color: var(--secondary);
  box-shadow: var(--shadow-card);
  background-clip: padding-box;
}

.input-hint-text {
  margin-left: 0.5em;
  color: var(--secondary-high);
}

.modal-header {
  display: flex;
  padding: 10px 15px;
  border-bottom: 1px solid var(--primary-low);
  align-items: center;

  .title {
    margin-right: 1em;

    h3 {
      margin-bottom: 0;
    }

    p {
      margin: 0;
    }
  }

  .modal-close {
    order: 2;
    margin-left: auto;
    align-self: start;
    padding: 0.15em 0;

    .close {
      color: var(--primary-high);
    }
  }
}

.modal-backdrop {
  user-select: none;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: z("modal", "overlay");
  background-color: #111;
  &.fade {
    opacity: 0;
  }
}

.modal-backdrop,
.modal-backdrop.fade.in {
  animation: fade 0.3s;
  @media (prefers-reduced-motion) {
    animation-duration: 0s;
  }
  opacity: 0.9;
  filter: alpha(opacity=90);
}

// fade in
@keyframes fade {
  from {
    opacity: 0;
  }
  to {
    opacity: 0.7;
  }
}

.inline-modal {
  .modal-inner-container {
    border: 1px solid var(--secondary-medium);
  }
}

.fixed-modal {
  position: fixed;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: z("modal", "content");
  overflow: auto;

  html.keyboard-visible body.ios-safari-composer-hacks & {
    height: calc(var(--composer-vh, 1vh) * 100);
    .modal-inner-container {
      max-height: 100%;
      margin-bottom: 0px;
    }
  }

  &:not(.bookmark-reminder-modal):not(.history-modal):not(
      .sidebar__edit-navigation-menu__modal
    ) {
    .modal-body:not(.reorder-categories):not(.poll-ui-builder):not(
        .poll-breakdown
      ) {
      max-height: 80vh !important;
      @media screen and (max-height: 500px) {
        max-height: 65vh !important;
      }
    }
  }
}

.modal-form {
  margin-bottom: 0;
}

.modal-footer {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  padding: 14px 15px 10px;
  border-top: 1px solid var(--primary-low);
  gap: 0.3em 0;
  .btn {
    margin: 0 0.75em 0 0;
    &[href] {
      min-height: unset;
    }
  }
}
/* ... */

